tests/spec/parse/snapshots/if_let_else_if_let.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(a: Option<int>, b: Option<int>) {
    if let Some(x) = a {
      print(x);
    } else if let Some(y) = b {
      print(y);
    } else {
      print("both none");
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "a",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Option",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 11,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "b",
                    span: Span {
                        file_id: 0,
                        byte_offset: 25,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Option",
                        params: [
                            Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 35,
                                    byte_length: 3,
                                },
                            },
                        ],
                        span: Span {
                            file_id: 0,
                            byte_offset: 28,
                            byte_length: 11,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    IfLet {
                        pattern: EnumVariant {
                            identifier: "Some",
                            fields: [
                                Identifier {
                                    identifier: "x",
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 57,
                                        byte_length: 1,
                                    },
                                    binding: None,
                                },
                            ],
                            rest: false,
                            resolution: Unresolved,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 52,
                                byte_length: 7,
                            },
                        },
                        scrutinee: Identifier {
                            value: "a",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 62,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        consequence: Block {
                            items: [
                                Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 70,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Identifier {
                                            value: "x",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 76,
                                                byte_length: 1,
                                            },
                                            resolution: Unresolved,
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 70,
                                        byte_length: 8,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 64,
                                byte_length: 19,
                            },
                        },
                        alternative: Present {
                            expression: IfLet {
                                pattern: EnumVariant {
                                    identifier: "Some",
                                    fields: [
                                        Identifier {
                                            identifier: "y",
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 101,
                                                byte_length: 1,
                                            },
                                            binding: None,
                                        },
                                    ],
                                    rest: false,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 96,
                                        byte_length: 7,
                                    },
                                },
                                scrutinee: Identifier {
                                    value: "b",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 106,
                                        byte_length: 1,
                                    },
                                    resolution: Unresolved,
                                },
                                consequence: Block {
                                    items: [
                                        Call {
                                            expression: Identifier {
                                                value: "print",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 114,
                                                    byte_length: 5,
                                                },
                                                resolution: Unresolved,
                                            },
                                            args: [
                                                Identifier {
                                                    value: "y",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 120,
                                                        byte_length: 1,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                            ],
                                            spread: None,
                                            type_arguments: None,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 114,
                                                byte_length: 8,
                                            },
                                            call_kind: Unresolved,
                                        },
                                    ],
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 108,
                                        byte_length: 19,
                                    },
                                },
                                alternative: Present {
                                    expression: Block {
                                        items: [
                                            Call {
                                                expression: Identifier {
                                                    value: "print",
                                                    ty: Var {
                                                        id: uninferred,
                                                    },
                                                    span: Span {
                                                        file_id: 0,
                                                        byte_offset: 139,
                                                        byte_length: 5,
                                                    },
                                                    resolution: Unresolved,
                                                },
                                                args: [
                                                    Literal {
                                                        literal: String {
                                                            value: "both none",
                                                            raw: false,
                                                        },
                                                        ty: Var {
                                                            id: uninferred,
                                                        },
                                                        span: Span {
                                                            file_id: 0,
                                                            byte_offset: 145,
                                                            byte_length: 11,
                                                        },
                                                    },
                                                ],
                                                spread: None,
                                                type_arguments: None,
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 139,
                                                    byte_length: 18,
                                                },
                                                call_kind: Unresolved,
                                            },
                                        ],
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 133,
                                            byte_length: 29,
                                        },
                                    },
                                    else_span: Span {
                                        file_id: 0,
                                        byte_offset: 128,
                                        byte_length: 4,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 89,
                                    byte_length: 73,
                                },
                            },
                            else_span: Span {
                                file_id: 0,
                                byte_offset: 84,
                                byte_length: 4,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 45,
                            byte_length: 117,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 41,
                    byte_length: 123,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 163,
        },
    },
]
